Manifest/CodeServer/CSDeployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: codeserver

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: codeserver
    app.kubernetes.io/instance: codeserver
    app.kubernetes.io/name: codeserver
  name: codeserver
  namespace: codeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: codeserver
          image: lscr.io/linuxserver/code-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
              name: https
              protocol: TCP
          volumeMounts:
            - name: codeserver
              mountPath: /config
      volumes:
        - name: codeserver
          persistentVolumeClaim:
            claimName: codeserver

---
apiVersion: v1
kind: Service
metadata:
  name: codeserver
  namespace: codeserver
spec:
  selector:
    app: codeserver
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: codeserver
  namespace: codeserver
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.cs.cybertronlabs.us`)
      kind: Rule
      services:
        - name: codeserver
          port: 8443
    - match: Host(`cs.cybertronlabs.us`)
      kind: Rule
      services:
        - name: codeserver
          port: 8443
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: rate-limit
          namespace: traefik
        - name: authentik-outpost
          namespace: traefik
#  tls:
#    secretName: cybertronlabs-tls # change to your cert name
